fix(debug, jss): adding custom tagNames for readability + removed JSS dependency which needs to manually installed (#4)
* feat(block): fixed issue with spacing for debug mode

* fix(build): added beta + next to buildable branches

* fix(readme): update readme.md

* fix(jss): dropped react-jss dep

* fix(minify): minify based on NODE_ENV

* fix(spacing): attempted fix at spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,12 @@
   font-family: Roboto;
 }
 
-html, body {
+input {
+  margin-bottom: 0 !important;
+}
+
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0;
